@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2014 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -110,6 +110,6 @@ public final class ModifiedSinceTerm extends SearchTerm {
      * Compute a hashCode for this object.
      */
     public int hashCode() {
-	return (int)modseq + super.hashCode();
+	return (int)modseq;
     }
 }
